crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E302_E302_first_line_docstring.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E302 [*] Expected 2 blank lines, found 1
 --> E302_first_line_docstring.py:3:1
  |
3 | def fn():
  | ^^^
  |
help: Add missing blank line(s)
1 | """Test where the error is after the module's docstring."""
2 |
3 +
4 | def fn():
5 |     pass
