crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E302_E302_first_line_expression.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E302 [*] Expected 2 blank lines, found 1
 --> E302_first_line_expression.py:3:1
  |
1 | "Test where the first line is a comment, " + "and the rule violation follows it."
2 |
3 | def fn():
  | ^^^
4 |     pass
  |
help: Add missing blank line(s)
  |
2 |
3 +
4 | def fn():
  |
