crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E302_E30_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected `]`, found `(`
 --> E30_syntax_error.py:4:15
  |
4 | def foo[T1, T2():
  |               ^
  |

E302 Expected 2 blank lines, found 1
 --> E30_syntax_error.py:7:1
  |
7 | def bar():
  | ^^^
  |
help: Add missing blank line(s)

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:13:18
   |
13 |     def __init__(
   |                  ^
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:18:11
   |
18 | foo = Foo(
   |           ^
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:21:9
   |
21 | def top(
   |         ^
   |
