crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E303_E30_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected `]`, found `(`
 --> E30_syntax_error.py:4:15
  |
4 | def foo[T1, T2():
  |               ^
  |

E303 Too many blank lines (3)
  --> E30_syntax_error.py:12:1
   |
12 | class Foo:
   | ^^^^^
   |
help: Remove extraneous blank line(s)

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:13:18
   |
13 |     def __init__(
   |                  ^
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:18:11
   |
18 | foo = Foo(
   |           ^
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:21:9
   |
21 | def top(
   |         ^
   |
