crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E305_E30_syntax_error.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
invalid-syntax: Expected `]`, found `(`
 --> E30_syntax_error.py:4:15
  |
4 | def foo[T1, T2():
  |               ^
  |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:13:18
   |
13 |     def __init__(
   |                  ^
   |

E305 Expected 2 blank lines after class or function definition, found (1)
  --> E30_syntax_error.py:18:1
   |
18 | foo = Foo(
   | ^^^
   |
help: Add missing blank line(s)

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:18:11
   |
18 | foo = Foo(
   |           ^
   |

invalid-syntax: Expected `)`, found newline
  --> E30_syntax_error.py:21:9
   |
21 | def top(
   |         ^
   |
